# stringify

./: .gitignore  .gitmodules  CMakeLists.txt  Implementation Details.md  README.md  generator.py
.github/workflows/: build_and_run_tests.yml
include/stringify/: stringify.hpp
src/: stringify.cpp
tests/: CMakeLists.txt  tests.cpp
